# ChangeLog for app-office/dia
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.105 2008/05/07 18:50:06 corsair Exp $

  07 May 2008; Markus Rothe <corsair@gentoo.org> dia-0.96.1-r1.ebuild:
  Stable on ppc64; bug #191673

  06 May 2008; Jeroen Roovers <jer@gentoo.org> dia-0.96.1-r1.ebuild:
  Stable for HPPA (bug #191673).

  01 May 2008; Markus Meier <maekke@gentoo.org> dia-0.96.1-r1.ebuild:
  amd64/x86 stable, bug #191673

  01 May 2008; Raúl Porcel <armin76@gentoo.org> dia-0.96.1-r1.ebuild:
  alpha/ia64/sparc stable wrt #191673

  01 May 2008; nixnut <nixnut@gentoo.org> dia-0.96.1-r1.ebuild:
  Stable on ppc wrt bug 191673

*dia-0.96.1-r1 (03 Apr 2008)

  03 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/dia-0.96.1-gnome-doc.patch, +files/dia-0.96.1-xml-fixes.patch,
  +dia-0.96.1-r1.ebuild:
  Remove man generation if USE="-doc", fix bug #205067. Always install
  documentation where gnome can find it. Conditional destination doesn't do
  any good anyway, fix #159381.

  09 Mar 2008; Mart Raudsepp <leio@gentoo.org> dia-0.95.1.ebuild,
  dia-0.96.1.ebuild:
  Fix build with newer intltool, bug 199598

  17 Nov 2007; Gilles Dartiguelongue <eva@gentoo.org> dia-0.96.1.ebuild:
  added conditional doc generation, fix bug #199412

*dia-0.96.1 (10 Apr 2007)

  10 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> -dia-0.96_pre3.ebuild,
  +dia-0.96.1.ebuild:
  Replace pre3 with the final of 0.96 now that it is available. ~mips dropped
  due to new libgnomeprint dependancy.

  10 Mar 2007; Peter Weller <welp@gentoo.org> dia-0.95.1.ebuild:
  Keyworded ~x86-fbsd

  05 Feb 2007; Jeroen Roovers <jer@gentoo.org> dia-0.95.1.ebuild:
  Stable for HPPA (inkscape).

*dia-0.96_pre3 (02 Feb 2007)

  02 Feb 2007; Robin H. Johnson <robbat2@gentoo.org> +dia-0.96_pre3.ebuild:
  Version bump to prerelease, fixes glitches with text overflow in exports
  that I need.
